[docs] Fix homepage on Safari

--- a/site/less/home.less
+++ b/site/less/home.less
@@ -51,7 +51,7 @@ body > main > article#home {
     color: @accentColor;
     font-family: Shantell;
     display: block;
-    margin: 2rem auto 0;
+    margin: 0 auto;
     text-align: center;
     white-space: nowrap;
     font-size: 1.1rem;
@@ -202,8 +202,7 @@ body > main > article#home {
       }
     }
     > p:nth-of-type(1) {
-      grid-column-end: span 4;
-      column-count: 2;
+      grid-column-end: span 2;
       column-gap: 4rem;
     }
     > section#friends,
